secutiry jwt and services with preauthorize